Fix backdrop filter on firefox

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,8 +88,9 @@ a {
 }
 
 .borderEffect {
-  position: relative;
+  position: relative !important;
   border-radius: 15px;
+  z-index: 10;
 }
 
 .borderEffect::after {
@@ -99,7 +100,6 @@ a {
   left: -4px;
   right: -4px;
   bottom: -4px;
-  background-image: linear-gradient(180deg, #fefdeb 0%, rgba(254, 253, 235, 0) 100%);
   border: 4px solid;
   border-radius: 16px;
   z-index: -1;
@@ -109,4 +109,22 @@ a {
   -webkit-mask: linear-gradient(180deg, white 0%, white 100%) padding-box, linear-gradient(180deg, white 0%, transparent 100%);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
+}
+
+@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  .backdrop-blur {
+    @apply backdrop-blur-5xl;
+  }
+  .borderEffect::after {
+    background-image: linear-gradient(180deg, #fefdeb 0%, rgba(254, 253, 235, 0) 100%);
+  }
+}
+
+@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  .backdrop-blur {
+    background-image: linear-gradient(rgba(19, 57, 88, 1) 40%, rgba(19, 57, 88, 0.6));
+  }
+  .borderEffect {
+    background-color: rgb(3, 11, 20);
+  }
 }
